# My2DGame

./: CMakeLists.txt
src/: application.cpp  application.hpp  collisionManager.hpp  defines.hpp  entity.cpp  entity.hpp  main.cpp  player.cpp  player.hpp  tile.hpp
src/entity/: baseEntity.hpp  movingEntity.cpp  movingEntity.hpp
src/geometry/: box.hpp
src/utils/: Camera.hpp  vectors.hpp
